--- a/lab-02-sad-plot.Rmd
+++ b/lab-02-sad-plot.Rmd
@@ -37,13 +37,13 @@ Team member 2 should pull to download updates and begins here.
 ### Exercise 2
 
 ```{r staff-long-create}
-# uncomment and edit the code below
-#staff_long <- ___ %>%
-#  ___(
-#    cols = ___, 
-#    names_to = "___",
-#    values_to = "___"
-#    )
+staff <- read_csv("data/instructional-staff.csv")
+staff_long <- staff %>%
+  pivot_longer(
+    cols = -faculty_type, 
+    names_to = "year",
+    values_to = "percentage"
+    )
 ```
 
 
@@ -52,7 +52,8 @@ Team member 2 should pull to download updates and begins here.
 *Remove this text and add your answer here.*
 
 ```{r staff-long-inspect}
-# remove this comment and add your code here
+staff_long
+
 ```
 
 
